# claudemem

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  install.ps1  install.sh
.github/workflows/: release.yml
memory/: Cargo.toml  build.rs
memory-dream/: Cargo.toml
memory-dream/src/: cli.rs  lib.rs  main.rs  settings.rs
memory-dream/src/dream/: agentic.rs  condense.rs  dedup.rs  mod.rs  prompt.rs
memory-dream/src/dream/project_review/: mod.rs  prompt.rs
memory-dream/src/inference/: candle_backend.rs  device.rs  headless.rs  mod.rs
memory-dream/src/model_manager/: fake_hub.rs  hub.rs  mod.rs
memory-dream/tests/: agentic_integration.rs  project_review_integration.rs  shell_injection_probe.rs
memory/src/: cli.rs  config.rs  error.rs  main.rs  project.rs  updater.rs
memory/src/db/: mod.rs  models.rs  queries.rs
memory/src/render/: mod.rs
memory/src/search/: bm25.rs  fusion.rs  mod.rs  vector.rs
memory/src/setup/: codex_config_toml.rs  gemini_settings_json.rs  menu.rs  mod.rs  rules.rs  settings_json.rs  skill.rs
skills/recall/: SKILL.md
skills/remember/: SKILL.md
src/: cli.rs  config.rs  embedding.rs  error.rs  lib.rs  main.rs  mcp.rs  project.rs  setup.rs  updater.rs
src/db/: mod.rs  queries.rs
src/render/: mod.rs
src/search/: bm25.rs  fusion.rs  mod.rs
src/setup/: menu.rs  mod.rs  rules.rs  skill.rs
