[package]
name = "memory-dream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Offline batch compactor for agent-memory: condense, dedup, archive"

[lib]
name = "memory_dream"
path = "src/lib.rs"

[[bin]]
name = "memory-dream"
path = "src/main.rs"

[dependencies]
# Library reuse from the sibling memory crate — DB schema, query helpers,
# embedding pipeline, cosine similarity, light-XML renderer.
agent-memory = { path = "../memory" }

# CLI
clap = { workspace = true }

# Async (for hf-hub download in --pull)
tokio = { workspace = true }

# Database (dream opens the same SQLite DB as `memory`)
rusqlite = { workspace = true }

# Embedding (re-embed condensed content via fastembed)
fastembed = { workspace = true }

# Serialization (parse JSON responses from the condenser LLM)
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
hex = "0.4"

# Settings file (dream.toml) — TOML parse/serialize for the persistent
# backend/model config layer. Intentionally separate from the SQLite store
# so the file is human-editable and version-controllable.
toml = "0.8"

# PATH probing for the first-run auto-detect: checks for `claude` / `gemini`
# binaries so a fresh install defaults to the right backend without prompts.
which = "8"

# Shell-safe tokenization of the headless command template. Used at
# settings-load time so memory content is never re-interpreted by a shell;
# spawn happens via `Command::new(tokens[0]).args(&tokens[1..])`.
shlex = "1"

# Candle — pure-Rust in-process inference backend for gemma3.
# The feature flags pull in the gemma model definition, tokenizers, and
# metal/accelerate backends where available (falling back to CPU).
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# HuggingFace Hub client (used by --pull to download gemma3 weights).
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }

# HTTP client — used directly for the HEAD metadata probe in the HF hub
# adapter so we can surface total file size before streaming begins.
# hf-hub re-exports a client but not its status-code types, and matching
# 401/403/404 on a typed StatusCode is cleaner than string-matching.
reqwest = { workspace = true }

# Async trait objects for the HubClient abstraction (test fake vs. real
# hf-hub impl). Tiny; no additional runtime cost.
async-trait = "0.1"

[dev-dependencies]
# Isolated staging dirs for the fake HubClient and for cache-dir fixtures
# in the model_manager tests.
tempfile = "3"
